5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1577_1332.log
== SUBMITION (2019-03-14 19:22:54) 
-- CODE:
aresta = 5
area = 3/2*sqrt(3*(aresta)**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.110924
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 2, in <module>
    area = 3/2*sqrt(3*(aresta)**2)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:20) 
-- CODE:
aresta = 5
area = 3/2*(3*(aresta)**2)**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.132201
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:56) 
-- CODE:
aresta = 5
area = 3/2*(3*(aresta)**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.142077
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:44) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.171532
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:27:34) 
-- CODE:
aresta = 5
area = 3/2*(3)**0,5*(aresta)**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.147089
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:28:44) 
-- CODE:
aresta = 5
area = 3/2*(3)**0,5*(5)
 
print(round(3/2*3**0,5*5**2, 4))
-- EXECUTION TIME:
0.152402
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 4, in <module>
    print(round(3/2*3**0,5*5**2, 4))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:28:51) 
-- CODE:

 
print(round(3/2*3**0,5*5**2, 4))
-- EXECUTION TIME:
0.165682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 3, in <module>
    print(round(3/2*3**0,5*5**2, 4))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:30:33) 
-- CODE:
aresta = 5
area = 1.5*(3)**0.5*(aresta)**2
 
print(round(area, 4))


-- EXECUTION TIME:
0.156248
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
